# makeadmin

./: .gitignore  CMakeLists.txt  CuTest.h  README.md  main.c  makeadmin_config.h.in  testmain.c  user.c  user.h
